--- a/lib/grid/core/grid.html
+++ b/lib/grid/core/grid.html
@@ -4,7 +4,6 @@
             <th *ngIf="showRowNumbers"></th>
 
             <th *ngFor="let gridColumn of gridColumns">
-
                 <header-renderer-injector [gridColumn]="gridColumn"></header-renderer-injector>
             </th>
 
@@ -15,21 +14,23 @@
 
     <tbody #scrollPane
            [ngClass]="{'grid__body--loading': isLoading}">
+
         <div class="loader-overlay"
-            *ngIf="isLoading"></div>
+            *ngIf="isLoading">
+        </div>
+
         <tr *ngFor="let data of dataProvider;
                     let i = index;">
-
-            <td *ngIf="showRowNumbers" >
+            <td *ngIf="showRowNumbers">
                 {{i + 1}}
             </td>
 
             <td *ngFor="let gridColumn of gridColumns;">
-
                 <item-renderer-injector
                     [gridColumn]="gridColumn"
                     [dataProvider]="dataProvider"
-                    [data]="data"></item-renderer-injector>
+                    [data]="data">
+                </item-renderer-injector>
             </td>
         </tr>
     </tbody>
