Adds refresh function to grid

--- a/lib/grid/core/grid.html
+++ b/lib/grid/core/grid.html
@@ -25,7 +25,7 @@
                 {{i + 1}}
             </td>
 
-            <td *ngFor="let gridColumn of gridColumns;">
+            <td *ngFor="let gridColumn of gridColumns">
                 <item-renderer-injector
                     [gridColumn]="gridColumn"
                     [dataProvider]="dataProvider"
